# Trade-Opportunities-API-Appscrip

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
app/: main.py
app/api/: routes.py
app/config/: settings.py
app/models/: request_models.py
app/security/: auth.py
app/services/: ai_service.py  market_service.py  search_service.py
app/utils/: logging.py  markdown.py
