[project]
name = "appscrip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
]
